--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -13,4 +13,17 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+    <Folder Include="Features\Clients\Commands\DeleteClientCommand\" />
+    <Folder Include="Features\Clients\Commands\UpdateClientCommand\" />
+    <Folder Include="Features\Clients\Queries\GetAllClients\" />
+    <Folder Include="Features\Clients\Queries\GetClientById\" />
+    <Folder Include="Filters\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
