--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BankRestfulDb;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
