Modified Pagination Client

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultPageNumber": 1,
+  "DefaultPageSize": 5
+
 }
