--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BankRestfulDb;Integrated Security=True;"
   },
+  "Caching": {
+    "RedisConnection": "localhost:6379"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,8 +12,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "DefaultPageNumber": 1,
-  "DefaultPageSize": 5
-
+  "Pagination": {
+    "DefaultPageNumber": 1,
+    "DefaultPageSize": 5
+  },
+  "AllowedHosts": "*"
 }
