Added JWT Authentication

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,9 +1,16 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BankRestfulDb;Integrated Security=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BankRestfulDb;Integrated Security=True;",
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityDb;Integrated Security=True;"
   },
   "Caching": {
     "RedisConnection": "localhost:6379"
+  },
+  "JWTSettings": {
+    "Key": "C1CF4B7DC4C4175B6618DE4F55CA4",
+    "Issuer": "BankResfulIssuer",
+    "Audience": "BankResfulAudience",
+    "DurationInMinutes": 15
   },
   "Logging": {
     "LogLevel": {
