--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BankRestfulDb;Integrated Security=True;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityDb;Integrated Security=True;"
+    "DefaultConnection": "Server=DESKTOP-C90QPSV;Database=BankRestfulDb;user id=sa;password=sa;",
+    "IdentityConnection": "Server=DESKTOP-C90QPSV;Database=IdentityDb;user id=sa;password=sa;"
   },
   "Caching": {
     "RedisConnection": "localhost:6379"
